# cpp-snake

./: meson.build
include/: display.h  game.h
src/: display.cpp  game.cpp  main.cpp
